# calcualte_tax_like_tally

./: README.md  license.txt  pyproject.toml  requirements.txt
calculate_tax_like_tally/: hooks.py  modules.txt
calculate_tax_like_tally/overrides/: sales_invoice.py
